# django-testapp

./: .env.dev  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
shapes/: admin.py  models.py  serializers.py  views.py
shapes/migrations/: 0001_initial.py  0002_alter_shape_face_count.py
shapes/templates/shapes/: shapes_page.html
shapes/tests/functional/: conftest.py  test_models.py  test_views.py
shapes/tests/unit/: test_serializers.py  test_zero.py
user_app/: admin.py  models.py
user_app/management/commands/: do_custom_command.py
user_app/migrations/: 0001_initial.py
user_app/templates/registration/: login.html
widget_project/: asgi.py  settings.py  urls.py  wsgi.py
