[tool.poetry]
name = "django-testapp"
version = "0.1.0"
description = ""
authors = ["Daniel Bove <daniel.bove@slicelife.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"
djangorestframework = "3.15.2"
django-extensions = "3.2.3"
django-redis = "5.4.0"
redis = "5.2.1"
psycopg2-binary = "2.9.9"
pytest-django= "4.8.0"
pytest = "8.3.1"
pylint-django = "2.5.5"
pytest-cov = "4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
pylint = "^2.17.4"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
